Fixed vertical spacing between bullets

--- a/najeebsajid.css
+++ b/najeebsajid.css
@@ -56,5 +56,5 @@ li a:hover {
 }
 
 li {
-    padding: 15px 0 5px;
+    padding-bottom: 15px;
 }
